--- a/photoStorage/src/app/search-results/search-results.component.css
+++ b/photoStorage/src/app/search-results/search-results.component.css
@@ -17,19 +17,18 @@
     border-radius: 10px;
     box-shadow: 10px 10px 20px 10px #000000;
 }
-.img-div{
-    display: inline-block;
-    padding: 0;
-    margin: 0;
+.grid-item{
+    float: left;
+    width: 20%;
 }
 
 @media screen and (max-width: 793px){
-    .img-div{
-        width: 25%;
+    .grid-item{
+        width: 33.33333%
     }
 }
 @media screen and (max-width: 575px){
-    .img-div{
-        width: 33.333333%;
+    .grid-item{
+        width: 50%;
     }
 }
