--- a/photoStorage/src/app/search-results/search-results.component.html
+++ b/photoStorage/src/app/search-results/search-results.component.html
@@ -3,6 +3,8 @@
 </div>
 <div *ngIf="databaseError" class="error"><p>No Database connection available</p>
 </div>
-<div *ngFor='let photo of photos | async' class='img-div'>
-  <app-mini-pics [photo]='photo' (previewPhoto)='sendPreview($event)'>...Loading</app-mini-pics>
+<div class="grid">
+    <app-mini-pics *ngFor='let photo of photos | async' class='grid-item'
+         [photo]='photo' (previewPhoto)='sendPreview($event)'>...Loading</app-mini-pics>
 </div>
+
