--- a/photoStorage/src/app/views/preview-pics/preview-pics.component.html
+++ b/photoStorage/src/app/views/preview-pics/preview-pics.component.html
@@ -2,7 +2,7 @@
   <img class="preview-pic img-fluid" [src]="url" alt="Photo preview" />
   <div class="preview-buttons">
     <button class="preview-button" (click)="closePrev()">Close</button>
-    <button class="preview-button"><a [href]="url" alt="Download image" download>Download</a></button>
+    <button class="preview-button"><a [href]="urlFull" alt="Download image" download>Download</a></button>
   </div>
   <table class="details">
     <tr>
