--- a/photoStorage/src/app/app.component.html
+++ b/photoStorage/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="font-sizer">
+    <div id="login">
+      <app-login>...Loading</app-login>
+    </div>
+  
     <div class="background">
       <!--photo preview-->
       <app-preview-pics [photo]="previewPhoto" [seePhoto]="seePhoto" (closePreview)="closePrev($event)"></app-preview-pics>
