--- a/photoStorage/src/app/login/login.component.css
+++ b/photoStorage/src/app/login/login.component.css
@@ -1,10 +1,20 @@
 #login-container{
-    position: relative;
-    text-align: right;
+    position: absolute;
+    top: 5px;
+    right: 5px;
     z-index: 1000;
+    width: 300px;
+    text-align: right;
 }
-.login.btn{
-    margin-bottom: 5px;
+#login-message{
+    color: #84fa97;
+}
+#login-error-message{
+    color: #e7a8a8;
+}
+.login-btn{
+    background-color: #00000099;
+    color: #ffffff;
 }
 .login-btn:hover{
     color: #a6a6a6;
@@ -12,8 +22,6 @@
     cursor: pointer;
 }
 #login-popout{
-    height: auto;
-    width: 200px;
     background-color: #00000099;
     border: 1px solid #ffffff;
     padding: 10px;
@@ -27,7 +35,28 @@
     border-radius: 5px;
     margin-top: 5px;
 }
+#login-popout button:hover{
+    cursor: pointer;
+}
+.spinner{
+    float: left;
+    margin-top: 5px;
+}
 .error-message{
-    color: red;
+    color: #f30707;
     font-size: 0.7em;
+}
+.spin{
+    animation: rotate 0.6s linear infinite;
+}
+.no-spin{
+    animation: none;
+}
+@keyframes rotate{
+    0%{
+        transform: rotateY(0deg);
+    }
+    to{
+        transform: rotateY(360deg);
+    }
 }
