--- a/photoStorage/src/app/login/login.component.html
+++ b/photoStorage/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div id="login-container">
+  <timer>{{minutesLeft}}</timer>
   <span id="login-message" *ngIf="loggedIn">{{loginMessage}}</span>
   <span id="login-error-message" *ngIf="loginError">{{loginMessage}}</span>
 
