--- a/photoStorage/src/app/login/login.component.html
+++ b/photoStorage/src/app/login/login.component.html
@@ -1,5 +1,6 @@
 <div id="login-container">
   
+  <span id="login-message" *ngIf="tokenNotPresent">{{loginMessage}}</span>
   <span id="login-message" *ngIf="loggedIn">{{loginMessage}} {{timeLeft.minutes}}:{{timeLeft.seconds}}</span>
   <span id="login-error-message" *ngIf="loginError">{{loginMessage}}</span>
 
