--- a/photoStorage/src/app/search-results/search-results.component.html
+++ b/photoStorage/src/app/search-results/search-results.component.html
@@ -3,8 +3,8 @@
 </div>
 <div *ngIf="databaseError" class="error"><p>No Database connection available</p>
 </div>
-<div class="grid">
-    <app-mini-pics *ngFor='let photo of photos | async' class='grid-item'
+<div class="row">
+    <app-mini-pics *ngFor='let photo of photos | async' class='pics col-lg-2 col-md-3 col-sm-4 col-6'
          [photo]='photo' (previewPhoto)='sendPreview($event)'>...Loading</app-mini-pics>
 </div>
 
